reach out edit css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <div class="header">
+        <!-- link elements listed below modified-->
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -26,6 +27,8 @@
     </div>
     <div class="hero"></div>
     <div class="content">
+        <!-- added alt elements for accesibility purposes
+            added div class content-hero to consolidate css -->
         <div id="search-engine-optimization" class="content-hero">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search engine optimization desk" />
             <h2>Search Engine Optimization</h2>
@@ -49,8 +52,10 @@
         </div>
     </div>
     <div class="benefits">
+        <!-- adjusted div class to benefit-style for consolidation -->
         <div class="benefit-style">
             <h3>Lead Generation</h3>
+            <!-- added alt elements for accesbility purposes -->
             <img src="./assets/images/lead-generation.png" alt="Lead generation" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
