--- a/index.html
+++ b/index.html
@@ -23,58 +23,58 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </nav>
-    <div class="hero"></div>
-    <div class="content">
+    </header>
+    <section class="hero"></section>
+    <section class="content">
         <!-- added alt elements for accesibility purposes
             added div class content-hero to consolidate css -->
-        <div id="search-engine-optimization" class="content-hero">
+        <article id="search-engine-optimization" class="content-hero">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search engine optimization desk" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="content-hero">
+        </article>
+        <article id="online-reputation-management" class="content-hero">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online reputation management" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="content-hero">
+        </article>
+        <article id="social-media-marketing" class="content-hero">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social media marketing " />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
-    <div class="benefits">
+        </article>
+    </section>
+    <section class="benefits">
         <!-- adjusted div class to benefit-style for consolidation -->
-        <div class="benefit-style">
+        <section class="benefit-style">
             <h3>Lead Generation</h3>
             <!-- added alt elements for accesbility purposes -->
             <img src="./assets/images/lead-generation.png" alt="Lead generation" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-style">
+        </section>
+        <section class="benefit-style">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-style">
+        </section>
+        <section class="benefit-style">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost management" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
+        </section>
+    </section>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
