--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
+        </nav>
     </header>
     <section class="hero"></section>
     <section class="content">
@@ -52,28 +53,28 @@
     </section>
     <section class="benefits">
         <!-- adjusted div class to benefit-style for consolidation -->
-        <section class="benefit-style">
+        <article class="benefit-style">
             <h3>Lead Generation</h3>
             <!-- added alt elements for accesbility purposes -->
             <img src="./assets/images/lead-generation.png" alt="Lead generation" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </section>
-        <section class="benefit-style">
+        </article>
+        <article class="benefit-style">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Brand awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </section>
-        <section class="benefit-style">
+        </article>
+        <article class="benefit-style">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cost management" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </section>
+        </article>
     </section>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
